--- a/module-1/lab-string-operations/your-code/challenge-1.ipynb
+++ b/module-1/lab-string-operations/your-code/challenge-1.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,22 +33,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Durante', 'un', 'tiempo', 'no', 'estuvo', 'segura', 'de', 'si', 'su', 'marido', 'era', 'su', 'marido']\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'Durante un tiempo no estuvo segura de si su marido era su marido...'"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "str_list = ['Durante', 'un', 'tiempo', 'no', 'estuvo', 'segura', 'de', 'si', 'su', 'marido', 'era', 'su', 'marido']\n",
     "# Your code here:\n",
-    "\n",
-    "print(str_list)\n"
+    "\" \".join(str_list) + \"...\""
    ]
   },
   {
@@ -60,12 +62,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Grocery list: bananas, bread, brownie mix, broccoli...'"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "food_list = ['Bananas', 'Chocolate', 'bread', 'diapers', 'Ice Cream', 'Brownie Mix', 'broccoli']\n",
-    "# Your code here:\n"
+    "# Your code here\n",
+    "\n",
+    "str(\"Grocery list: \"+\", \".join([e.lower() for e in food_list if e.startswith(\"B\") or e.startswith(\"b\")]) + \"...\")\n"
    ]
   },
   {
@@ -79,9 +94,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The area of the circle with radius: 4.5 is: 63.61725123519331\n"
+     ]
+    }
+   ],
    "source": [
     "import math\n",
     "\n",
@@ -98,9 +121,11 @@
     "    # Sample Output: 78.53981633\n",
     "    \n",
     "    # Your code here:\n",
+    "    return pi*(x**2)\n",
     "    \n",
     "    \n",
-    "# Your output string here:"
+    "# Your output string here:\n",
+    "print(string1,radius,string2,area(radius))"
    ]
   },
   {
@@ -116,9 +141,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 140,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Some': 2, 'say': 3, 'the': 1, 'world': 1, 'will': 1, 'end': 1, 'in': 2, 'fire,': 1, 'ice': 2, 'From': 1, 'what': 1, 'I’ve': 1, 'tasted': 1, 'of': 2, 'desire': 1, 'I': 3, 'hold': 1, 'with': 1, 'those': 1, 'who': 1, 'favor': 1, 'fire': 1, 'But': 1, 'if': 1, 'it': 1, 'had': 1, 'to': 1, 'perish': 1, 'twice,': 1, 'think': 1, 'know': 1, 'enough': 1, 'hate': 1, 'To': 1, 'that': 1, 'for': 1, 'destruction': 1, 'Is': 1, 'also': 1, 'great': 1, 'And': 1, 'would': 1, 'suffice': 1}\n"
+     ]
+    }
+   ],
    "source": [
     "poem = \"\"\"Some say the world will end in fire,\n",
     "Some say in ice.\n",
@@ -130,7 +163,20 @@
     "Is also great\n",
     "And would suffice.\"\"\"\n",
     "\n",
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "l = poem.replace(\"\\n\",\" \").replace(\".\",\"\").split(\" \")\n",
+    "f=[]\n",
+    "for i in l:\n",
+    "    f.append(l.count(i))\n",
+    "\n",
+    "c=dict(zip(l,f))    \n",
+    "print(c)\n",
+    "\n",
+    "\n",
+    "\n",
+    "# for i in poem:\n",
+    "    # i = i+1\n",
+    "    \n"
    ]
   },
   {
@@ -142,9 +188,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 222,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['i', 'was', 'angry', 'with', 'my', 'friend', 'i', 'told', 'my', 'wrath', 'my', 'wrath', 'did', 'endi', 'was', 'angry', 'with', 'my', 'foe:', 'i', 'told', 'not', 'my', 'wrath', 'did', 'grow', 'i', 'waterd', 'fearsnight', '&', 'morning', 'with', 'my', 'tears:', 'i', 'sunned', 'with', 'smilesand', 'with', 'soft', 'deceitful', 'wiles', 'grew', 'both', 'day', 'night', 'till', 'bore', 'apple', 'bright', 'my', 'foe', 'beheld', 'shineand', 'he', 'knew', 'that', 'was', 'mine', 'into', 'my', 'garden', 'stole', 'when', 'night', 'had', 'veild', 'pole', 'morning', 'glad', 'i', 'see', 'my', 'foe', 'outstretched', 'beneath', 'tree']\n"
+     ]
+    }
+   ],
    "source": [
     "blacklist = ['and', 'as', 'an', 'a', 'the', 'in', 'it']\n",
     "\n",
@@ -168,7 +222,147 @@
     "In the morning glad I see; \n",
     "My foe outstretched beneath the tree.\"\"\"\n",
     "\n",
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "l = poem.lower().replace(\";\",\"\").replace(\".\",\"\").replace(\"\\n\",\"\").replace(\",\",\"\").replace(\"''\",\"\").split(\" \")\n",
+    "cl = [i for i in l if i not in blacklist]\n",
+    "\n",
+    "print(cl)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 221,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['i', 'was', 'angry', 'with', 'my', 'friend', 'i', 'told', 'my', 'wrath', 'my', 'wrath', 'did', 'endi', 'was', 'angry', 'with', 'my', 'foe:', 'i', 'told', 'not', 'my', 'wrath', 'did', 'grow', 'i', 'waterd', 'fearsnight', '&', 'morning', 'with', 'my', 'tears:', 'i', 'sunned', 'with', 'smilesand', 'with', 'soft', 'deceitful', 'wiles', 'grew', 'both', 'day', 'night', 'till', 'bore', 'apple', 'bright', 'my', 'foe', 'beheld', 'shineand', 'he', 'knew', 'that', 'was', 'mine', 'into', 'my', 'garden', 'stole', 'when', 'night', 'had', 'veild', 'pole', 'morning', 'glad', 'i', 'see', 'my', 'foe', 'outstretched', 'beneath', 'tree']\n"
+     ]
+    }
+   ],
+   "source": [
+    "blacklist = ['and', 'as', 'an', 'a', 'the', 'in', 'it']\n",
+    "\n",
+    "poem = \"\"\"I was angry with my friend; \n",
+    "I told my wrath, my wrath did end.\n",
+    "I was angry with my foe: \n",
+    "I told it not, my wrath did grow. \n",
+    "\n",
+    "And I waterd it in fears,\n",
+    "Night & morning with my tears: \n",
+    "And I sunned it with smiles,\n",
+    "And with soft deceitful wiles. \n",
+    "\n",
+    "And it grew both day and night. \n",
+    "Till it bore an apple bright. \n",
+    "And my foe beheld it shine,\n",
+    "And he knew that it was mine. \n",
+    "\n",
+    "And into my garden stole, \n",
+    "When the night had veild the pole; \n",
+    "In the morning glad I see; \n",
+    "My foe outstretched beneath the tree.\"\"\"\n",
+    "\n",
+    "l = poem.lower().replace(\";\",\"\").replace(\".\",\"\").replace(\"\\n\",\"\").replace(\",\",\"\").replace(\"''\",\"\").split(\" \")\n",
+    "\n",
+    "print([i for i in l if i not in blacklist])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 223,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "i\n",
+      "was\n",
+      "angry\n",
+      "with\n",
+      "my\n",
+      "friend\n",
+      "i\n",
+      "told\n",
+      "my\n",
+      "wrath\n",
+      "my\n",
+      "wrath\n",
+      "did\n",
+      "endi\n",
+      "was\n",
+      "angry\n",
+      "with\n",
+      "my\n",
+      "foe:\n",
+      "i\n",
+      "told\n",
+      "not\n",
+      "my\n",
+      "wrath\n",
+      "did\n",
+      "grow\n",
+      "i\n",
+      "waterd\n",
+      "fearsnight\n",
+      "&\n",
+      "morning\n",
+      "with\n",
+      "my\n",
+      "tears:\n",
+      "i\n",
+      "sunned\n",
+      "with\n",
+      "smilesand\n",
+      "with\n",
+      "soft\n",
+      "deceitful\n",
+      "wiles\n",
+      "grew\n",
+      "both\n",
+      "day\n",
+      "night\n",
+      "till\n",
+      "bore\n",
+      "apple\n",
+      "bright\n",
+      "my\n",
+      "foe\n",
+      "beheld\n",
+      "shineand\n",
+      "he\n",
+      "knew\n",
+      "that\n",
+      "was\n",
+      "mine\n",
+      "into\n",
+      "my\n",
+      "garden\n",
+      "stole\n",
+      "when\n",
+      "night\n",
+      "had\n",
+      "veild\n",
+      "pole\n",
+      "morning\n",
+      "glad\n",
+      "i\n",
+      "see\n",
+      "my\n",
+      "foe\n",
+      "outstretched\n",
+      "beneath\n",
+      "tree\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in l:\n",
+    "    if i not in blacklist:\n",
+    "        print(i)"
    ]
   },
   {
@@ -182,14 +376,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 225,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['T', 'P']\n"
+     ]
+    }
+   ],
    "source": [
     "poem = \"\"\"The apparition of these faces in the crowd;\n",
     "Petals on a wet, black bough.\"\"\"\n",
     "\n",
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "print(re.findall('[A-Z]', poem))"
    ]
   },
   {
@@ -201,20 +404,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 294,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['123abc', 'abc123', 'JohnSmith1', 'ABBY4']\n"
+     ]
+    }
+   ],
    "source": [
     "data = ['123abc', 'abc123', 'JohnSmith1', 'ABBY4', 'JANE']\n",
-    "\n",
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "ds = []\n",
+    "# re.search('\\d+\\w+|\\w+\\d+', data)\n",
+    "for a in data:\n",
+    "    if re.search('[0-9]', a):\n",
+    "        ds.append(a)\n",
+    "        \n",
+    "print(ds)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Bonus Challenge - Regular Expressions II\n",
+    "#### Bonus Challenge - Regular Expressions II\n",
     "\n",
     "In the cell below, filter the list provided to keep only strings containing at least one digit and at least one lower case letter. As in the previous question, use the `re.search` function and check that the result is not `None`.\n",
     "\n",
@@ -223,13 +440,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 306,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['123abc', 'abc123', 'JohnSmith1']\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = ['123abc', 'abc123', 'JohnSmith1', 'ABBY4', 'JANE']\n",
+    "# Your code here:\n",
+    "ds =[]\n",
+    "for a in data:\n",
+    "    if re.search('[^A-Z][^0-9]', a):\n",
+    "        ds.append(a)\n",
+    "        \n",
+    "print(ds)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "data = ['123abc', 'abc123', 'JohnSmith1', 'ABBY4', 'JANE']\n",
-    "# Your code here:\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
