--- a/module-1/lab-string-operations/your-code/challenge-1.ipynb
+++ b/module-1/lab-string-operations/your-code/challenge-1.ipynb
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -159,9 +159,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Some': 2,\n",
+       " 'say': 3,\n",
+       " 'the': 1,\n",
+       " 'world': 1,\n",
+       " 'will': 1,\n",
+       " 'end': 1,\n",
+       " 'in': 2,\n",
+       " 'fire': 2,\n",
+       " 'ice': 2,\n",
+       " 'From': 1,\n",
+       " 'what': 1,\n",
+       " 'I’ve': 1,\n",
+       " 'tasted': 1,\n",
+       " 'of': 2,\n",
+       " 'desire': 1,\n",
+       " 'I': 3,\n",
+       " 'hold': 1,\n",
+       " 'with': 1,\n",
+       " 'those': 1,\n",
+       " 'who': 1,\n",
+       " 'favor': 1,\n",
+       " 'But': 1,\n",
+       " 'if': 1,\n",
+       " 'it': 1,\n",
+       " 'had': 1,\n",
+       " 'to': 1,\n",
+       " 'perish': 1,\n",
+       " 'twice': 1,\n",
+       " 'think': 1,\n",
+       " 'know': 1,\n",
+       " 'enough': 1,\n",
+       " 'hate': 1,\n",
+       " 'To': 1,\n",
+       " 'that': 1,\n",
+       " 'for': 1,\n",
+       " 'destruction': 1,\n",
+       " 'Is': 1,\n",
+       " 'also': 1,\n",
+       " 'great': 1,\n",
+       " 'And': 1,\n",
+       " 'would': 1,\n",
+       " 'suffice': 1}"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "poem = \"\"\"Some say the world will end in fire,\n",
     "Some say in ice.\n",
@@ -173,98 +225,110 @@
     "Is also great\n",
     "And would suffice.\"\"\"\n",
     "\n",
-    "# Your code here:\n",
-    "#print(poem.split(\" \"))\n",
-    "a = poem.replace(\"\\n\",\"\")\n",
     "\n",
-    "b= a.replace(\",\",\"\")\n",
     "\n",
-    "c= b.replace(\".\", \"\")\n",
+    "e=poem.replace('\\n',' ').replace('.','').replace(',','').split(' ')\n",
     "\n",
-    "d= c.replace(\"I’ve\", \"I have\")\n",
     "\n",
-    "e = d.split(\" \")\n",
     "\n",
-    "e"
+    "d= dict((i, e.count(i)) for i in e)\n",
+    "d"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import operator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Some',\n",
-       " 'say',\n",
-       " 'the',\n",
-       " 'world',\n",
-       " 'will',\n",
-       " 'end',\n",
-       " 'in',\n",
-       " 'fireSome',\n",
-       " 'say',\n",
-       " 'in',\n",
-       " 'iceFrom',\n",
-       " 'what',\n",
-       " 'I',\n",
-       " 'have',\n",
-       " 'tasted',\n",
-       " 'of',\n",
-       " 'desireI',\n",
-       " 'hold',\n",
-       " 'with',\n",
-       " 'those',\n",
-       " 'who',\n",
-       " 'favor',\n",
-       " 'fireBut',\n",
-       " 'if',\n",
-       " 'it',\n",
-       " 'had',\n",
-       " 'to',\n",
-       " 'perish',\n",
-       " 'twiceI',\n",
-       " 'think',\n",
-       " 'I',\n",
-       " 'know',\n",
-       " 'enough',\n",
-       " 'of',\n",
-       " 'hateTo',\n",
-       " 'say',\n",
-       " 'that',\n",
-       " 'for',\n",
-       " 'destruction',\n",
-       " 'iceIs',\n",
-       " 'also',\n",
-       " 'greatAnd',\n",
-       " 'would',\n",
-       " 'suffice']"
+       "[('the', 1),\n",
+       " ('world', 1),\n",
+       " ('will', 1),\n",
+       " ('end', 1),\n",
+       " ('From', 1),\n",
+       " ('what', 1),\n",
+       " ('I’ve', 1),\n",
+       " ('tasted', 1),\n",
+       " ('desire', 1),\n",
+       " ('hold', 1),\n",
+       " ('with', 1),\n",
+       " ('those', 1),\n",
+       " ('who', 1),\n",
+       " ('favor', 1),\n",
+       " ('But', 1),\n",
+       " ('if', 1),\n",
+       " ('it', 1),\n",
+       " ('had', 1),\n",
+       " ('to', 1),\n",
+       " ('perish', 1),\n",
+       " ('twice', 1),\n",
+       " ('think', 1),\n",
+       " ('know', 1),\n",
+       " ('enough', 1),\n",
+       " ('hate', 1),\n",
+       " ('To', 1),\n",
+       " ('that', 1),\n",
+       " ('for', 1),\n",
+       " ('destruction', 1),\n",
+       " ('Is', 1),\n",
+       " ('also', 1),\n",
+       " ('great', 1),\n",
+       " ('And', 1),\n",
+       " ('would', 1),\n",
+       " ('suffice', 1),\n",
+       " ('Some', 2),\n",
+       " ('in', 2),\n",
+       " ('fire', 2),\n",
+       " ('ice', 2),\n",
+       " ('of', 2),\n",
+       " ('say', 3),\n",
+       " ('I', 3)]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "a = poem.replace(\"\\n\",\"\").replace(\",\",\"\").replace(\".\", \"\").replace(\"I’ve\", \"I have\").split(\" \")\n",
-    "a\n",
-    "\n"
+    "resultado = sorted(d.items(), key=operator.itemgetter(1))\n",
+    "\n",
+    "resultado"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "In the cell below, find all the words that appear in the text and do not appear in the blacklist. You must parse the string but can choose any data structure you wish for the words that do not appear in the blacklist. Remove all non letter characters and convert all words to lower case."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['i', 'was', 'angry', 'with', 'my', 'told', 'my', 'my', 'wrath', 'did', 'was', 'angry', 'with', 'my', 'told', 'it', 'my', 'wrath', 'did', 'i', 'waterd', 'it', 'in', 'morning', 'with', 'my', 'i', 'sunned', 'it', 'with', 'with', 'soft', 'deceitful', 'it', 'grew', 'both', 'day', 'and', 'it', 'bore', 'an', 'apple', 'my', 'foe', 'beheld', 'it', 'he', 'knew', 'that', 'it', 'was', 'into', 'my', 'garden', 'the', 'night', 'had', 'veild', 'the', 'the', 'morning', 'glad', 'i', 'foe', 'outstretched', 'beneath', 'the']\n"
+     ]
+    }
+   ],
    "source": [
     "blacklist = ['and', 'as', 'an', 'a', 'the', 'in', 'it']\n",
     "\n",
@@ -283,12 +347,19 @@
     "And my foe beheld it shine,\n",
     "And he knew that it was mine. \n",
     "\n",
-    "And into my garden stole, \n",
+    "And into my garden stole,  \n",
     "When the night had veild the pole; \n",
     "In the morning glad I see; \n",
     "My foe outstretched beneath the tree.\"\"\"\n",
     "\n",
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "p2=poem.split(\" \")\n",
+    "\n",
+    "print([i.lower() for i in p2 if (i.isalpha())])\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -302,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
